--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <li><a href="#">Concept</a></li>
             <li><a href="#">Service</a></li>
             <li><a href="#">Works</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="contact.html">Contact</a></li>
           </ul>
         </nav>
       </div>
